Harden replication lifecycle and Java cleanup